--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio-start",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://macheteby.github.io/portfolio-/",
+  "homepage": "https://macheteby.github.io/MacheteBy.github.io/",
   "dependencies": {
     "@babel/core": "7.16.0",
     "@pmmmwh/react-refresh-webpack-plugin": "0.5.3",
